--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: News from London
 email: zhangjiaqiang@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   A daily journal from Edward Hyde.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/london-news" # the subpath of your site, e.g. /blog
 url: "localhost:4000" # the base hostname & protocol for your site
 
 # Build settings
